--- a/common/common-generator/src/main/resources/template/dao/Mapper.vm
+++ b/common/common-generator/src/main/resources/template/dao/Mapper.vm
@@ -1,9 +1,11 @@
-package ${packageName}.dao;
+package ${packageName}.mapper;
+import ${packageName}.entity.${entityName};
+import com.common.mybatis.BaseMapper;
 
 
 /**
- * @auth guozhenhua
- * @date ${ctime}
+ * @auth generator
+ * @date ${date}
  */
 public interface ${entityName}Mapper extends BaseMapper<${entityName}> {
 
